Actions
Bug #9741
closedlibi386: fix DEBUG messages in biosdisk
Start date:
2018-08-16
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
The messages are a bit misleading because the IO can be either read or write.
Updated by Electric Monk almost 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 43f9d55fa4bea101f8b3961606dec0af0b38b2ab
commit 43f9d55fa4bea101f8b3961606dec0af0b38b2ab Author: Toomas Soome <tsoome@me.com> Date: 2018-08-21T04:37:08.000Z 9741 libi386: fix DEBUG messages in biosdisk Reviewed by: Jason King <jason.king@joyent.com> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Reviewed by: Yuri Pankov <yuripv@yuripv.net> Approved by: Robert Mustacchi <rm@joyent.com>
Actions