9741 libi386: fix DEBUG messages in biosdisk Reviewed by: Jason King <jason.king@joyent.com> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Reviewed by: Yuri Pankov <yuripv@yuripv.net> Approved by: Robert Mustacchi <rm@joyent.com>